--- a/ssr-build/ssr-bundle.a4037.css
+++ b/ssr-build/ssr-bundle.a4037.css
@@ -66,10 +66,10 @@ a:hover{
 }
 
 .mockup__J5HF\+ {
-	grid-column-start: 6;
-	grid-column-end: 14;
-	grid-row-start: 2;
-	grid-row-end: 10;
+	grid-column-start: 4;
+	grid-column-end: 12;
+	grid-row-start: 3;
+	grid-row-end: 9;
 	display: grid;
 	grid-template-columns: repeat(10, 1fr);
 	grid-template-rows: repeat(10, 1fr);
@@ -511,4 +511,4 @@ body {
 }
 
 
-/*# sourceMappingURL=ssr-bundle.d7360.css.map*/
+/*# sourceMappingURL=ssr-bundle.a4037.css.map*/
