--- a/src/components/mockups/style.css
+++ b/src/components/mockups/style.css
@@ -10,45 +10,143 @@
     -moz-box-shadow: -7px 8px 20px 0px rgba(0, 0, 0, 0.75); */
 }
 
-.ui {
-    grid-column-start: 4;
-    grid-column-end: 11;
-    grid-row-start: 4;
-    grid-row-end: 11;
+.card_holder {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    align-items: center;
+    background: #232424ed;
+    /* grid-template-rows: repeat(10, 1fr); */
 }
 
-.ui_2 {
-    grid-column-start: 2;
-    grid-column-end: 11;
-    grid-row-start: 2;
-    grid-row-end: 11;
+@media only screen and (max-width: 600px) {
+    .card_wrapper {
+        left: -5%;
+        top: -4vh;
+        width: 75vw;
+        height: 15vh;
+        margin: 5%;
+    }
 }
 
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    .card_wrapper {
+        left: 10%;
+        top: 0vh;
+        width: 60vw;
+        height: 25vh;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    .card_wrapper {
+        left: 5%;
+        top: 0vh;
+        width: 25vw;
+        height: 30vh;
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    .card_wrapper {
+        left: 5%;
+        top: 10vh;
+        width: 30vw;
+        height: 35vh;
+
+    }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    .card_wrapper {
+        left: 5%;
+        top: 10vh;
+        width: 30vw;
+        height: 35vh;
+    }
+}
+
+.card_wrapper {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    background: #1e1e1e;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    border-radius: 20px;
+    overflow: hidden;
+    padding: 10px;
+    box-shadow: -2px 2px 0px 0px #202020,
+    -10px 10px 40px 0px rgba(0, 0, 0, 0.3);
+    transform: rotateX(25deg) rotateZ(-20deg);
+    z-index: 2;
+    transition: all 0.75s ease-in-out;
+    filter: grayscale(0.5);
+}
+
+.card_holder .card_wrapper:nth-of-type(1) {
+    z-index: 2;
+}
+
+.card_holder .card_wrapper:nth-of-type(2) {
+    z-index: 3;
+    margin: 100px;
+}
+
+.card_holder .card_wrapper:nth-of-type(1):hover{
+    transform: translateY(-15vh) rotateX(25deg) rotateZ(-20deg);
+}
+
+.card_holder .card_wrapper:nth-of-type(2):hover{
+    transform: translateY(-10vh) rotateX(25deg) rotateZ(-20deg);
+}
+
+
+
+.card_topper {
+    background: #1e1e1e;;
+    display: flex;
+}
+
+.card_button {
+    border-radius: 50%;
+    height: 15px;
+    width: 15px;
+    margin: 5px;
+    z-index: 3;
+}
+
+.card_button:nth-of-type(1) {
+    background: crimson !important;
+}
+
+.card_button:nth-of-type(2) {
+    background: goldenrod;
+}
+
+.card_button:nth-of-type(3) {
+    background: chartreuse;
+}
 
 .card {
-    position: relative;
-    margin: auto;
+    margin: 0;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    width: 45vw;
-    height: 50vh;
-    object-fit: contain;
-    padding: 2px;
+    object-fit: cover;
     overflow: hidden;
-    background: #252525 ;
-    border-radius: 10px;
-    box-shadow: -2px 2px 0px 0px #202020, -10px 10px 40px 0px rgba(0, 0, 0, 0.3);
-    transform: translate(0px, 0px) rotateX(25deg) rotateZ(-10deg);
-    z-index: 2;
-    transition: all 1s ease;
+    background: #252525;
 }
 
-.card:hover {
-    /* transform: translateY(-10vh) rotateX(25deg) rotateZ(-20deg); */
-    transform: translateY(-20vh) rotateZ(0deg);
+.card_wrapper:hover {
     box-shadow: -2px 1px 0px 0px #202020, -40px 40px 40px 0 rgba(0, 0, 0, 0.2);
     cursor: pointer;
-    
+    filter: grayscale(0);
+    background: #4FA9E5AA;
 }
