--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -7,42 +7,49 @@
 	padding: 0;
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 	z-index: 50;
-	background: #111112;
+	background: #202020;
+	align-content: center;
+	align-items: center;
+	display:flex;
 }
 
-.header h1 {
-	float: left;
+.header span {
+	flex: 1;
 	margin: 0;
-	padding: 0 15px;
-	font-size: 24px;
-	line-height: 56px;
-	font-weight: 400;
-	color: #FFF;
+	padding: 20px;
+	font-size: 10px;
 }
 
 .header nav {
 	float: right;
-	font-size: 100%;
+	text-align: end;
 }
 
 .header nav a {
 	display: inline-block;
-	height: 56px;
-	line-height: 56px;
-	padding: 0 15px;
+	padding: 10px;
+	margin: 10px;
 	min-width: 50px;
 	text-align: center;
-	background: rgba(255,255,255,0);
 	text-decoration: none;
 	color: #FFF;
-	will-change: background-color;
 }
 
-.header nav a:hover,
-.header nav a:active {
-	background: rgba(0,0,0,0.2);
+.header .contact {
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-weight: lighter;
+	transition: ease-in-out 0.4s;
+	letter-spacing: 0.05em;
+	color: #FFF5F5;
+	cursor: pointer;
+	border-bottom: 1px solid #202020;
+	border-top: 1px solid #202020;
 }
 
-.header nav a.active {
-	background: rgba(0,0,0,0.4);
+.header .contact:hover {
+	color: #4FA9E5ED;
+	border-bottom: 1px solid #4FA9E5;
+	border-top: 1px solid #4FA9E5; 
 }
+
+
