--- a/src/components/mockups/style.css
+++ b/src/components/mockups/style.css
@@ -106,14 +106,14 @@
 
 .card_button {
     border-radius: 50%;
-    height: 15px;
-    width: 15px;
+    height: 10px;
+    width: 10px;
     margin: 5px;
     z-index: 3;
 }
 
 .card_button:nth-of-type(1) {
-    background: crimson !important;
+    background: rgb(219, 20, 60) !important;
 }
 
 .card_button:nth-of-type(2) {
@@ -136,8 +136,7 @@
 }
 
 .card_wrapper:hover {
-    box-shadow: -2px 1px 0px 0px #202020, -40px 40px 40px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: -0px 1px 0px 1px #0b5eac22, -0px 5px 2px 0px rgba(0, 222, 255, 0.1);
     cursor: pointer;
     filter: grayscale(0);
-    background: #4FA9E5AA;
 }
