--- a/ssr-build/ssr-bundle.46e00.css
+++ b/ssr-build/ssr-bundle.46e00.css
@@ -39,6 +39,7 @@ a:hover{
 	height: auto;
 	background-color: #1E1E1E;
 	overflow: hidden;
+	scroll-behavior: smooth;
 }
 
 .wrapper__fPxcn {
@@ -408,14 +409,14 @@ a:hover{
 
 .card_button__yMz73 {
     border-radius: 50%;
-    height: 15px;
-    width: 15px;
+    height: 10px;
+    width: 10px;
     margin: 5px;
     z-index: 3;
 }
 
 .card_button__yMz73:nth-of-type(1) {
-    background: crimson !important;
+    background: rgb(219, 20, 60) !important;
 }
 
 .card_button__yMz73:nth-of-type(2) {
@@ -439,11 +440,10 @@ a:hover{
 }
 
 .card_wrapper__2uuw5:hover {
-    box-shadow: -2px 1px 0px 0px #202020, -40px 40px 40px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: -0px 1px 0px 1px #0b5eac22, -0px 5px 2px 0px rgba(0, 222, 255, 0.1);
     cursor: pointer;
     -webkit-filter: grayscale(0);
             filter: grayscale(0);
-    background: #4FA9E5AA;
 }
 
 /*Utilities Library*/
@@ -1906,8 +1906,86 @@ a:hover{
 .bg-accent-hover:hover {
     background: #4FA9E5ED;
     transition: 0.3s ease-in;
+    color: #FFF5F5 !important;
 }
 
-/*#endregion */
+.segoe {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 
-/*# sourceMappingURL=ssr-bundle.3a3d4.css.map*/
+.text-light{
+    font-weight: lighter;
+}
+
+.text-bold{
+    font-weight: bolder;
+}
+
+.text-tm-red:hover{
+    color : #f65d69 !important;
+}
+
+
+/*#endregion */
+.header__OVZyn {
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 10vh;
+	padding: 0;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+	z-index: 50;
+	background: #202020;
+	-ms-flex-line-pack: center;
+	    align-content: center;
+	-ms-flex-align: center;
+	    align-items: center;
+	display:-ms-flexbox;
+	display:flex;
+}
+
+.header__OVZyn span {
+	-ms-flex: 1;
+	    flex: 1;
+	margin: 0;
+	padding: 20px;
+	font-size: 10px;
+}
+
+.header__OVZyn nav {
+	float: right;
+	text-align: end;
+}
+
+.header__OVZyn nav a {
+	display: inline-block;
+	padding: 10px;
+	margin: 10px;
+	min-width: 50px;
+	text-align: center;
+	text-decoration: none;
+	color: #FFF;
+}
+
+.header__OVZyn .contact__XCiXF {
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-weight: lighter;
+	transition: ease-in-out 0.4s;
+	letter-spacing: 0.05em;
+	color: #FFF5F5;
+	cursor: pointer;
+	border-bottom: 1px solid #202020;
+	border-top: 1px solid #202020;
+}
+
+.header__OVZyn .contact__XCiXF:hover {
+	color: #4FA9E5ED;
+	border-bottom: 1px solid #4FA9E5;
+	border-top: 1px solid #4FA9E5; 
+}
+
+
+
+
+/*# sourceMappingURL=ssr-bundle.46e00.css.map*/
