--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -240,3 +240,31 @@ a:hover{
 	justify-content: center;
 }
 
+.image_modal {
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	z-index: 99;
+	background: none;
+	backdrop-filter: blur(5px);
+	background: #1E1E1EEE;
+}
+
+.image_modal img{
+	background: #1E1E1E;
+	background-size: contain;
+	background-position: center;
+	height: 90vh;
+	width: auto;
+	padding: 2.5vw;
+	border-radius: 10px;
+	box-shadow: -0px 1px 0px 1px #0b5eac22,
+	-10px 10px 40px 0px rgba(0, 222, 255, 0.1);
+	background: #1E1E1E;
+	align-self: center;
+	justify-self: center;
+}
