--- a/src/style/utilities.css
+++ b/src/style/utilities.css
@@ -1429,6 +1429,10 @@
     font-weight: bolder;
 }
 
+.text-red {
+    color : #f65d69 !important;
+}
+
 .text-tm-red:hover{
     color : #f65d69 !important;
 }
